scrollbar and other css fixes

--- a/src/styles/MyBeats.css
+++ b/src/styles/MyBeats.css
@@ -5,7 +5,7 @@
 }
 
 .btnDownloadMyBeats {
-    background-color: rgb(255, 162, 0);
+    background: #ff9500;
     margin-left: 60px;
     margin-right: 60px;
     margin-top: 40px;
@@ -24,7 +24,7 @@
         margin-left: 16px;
     }
 .btnDownloadMyBeats {
-    background-color: rgb(255, 162, 0);
+    background: #ff9500;
     margin-left: 200px;
     margin-right: 200px;
     margin-top: 20px;
