--- a/src/styles/cart.css
+++ b/src/styles/cart.css
@@ -51,7 +51,7 @@ p
     margin-right: 10px;
     margin-left: 13px;
     margin-top: -5px;
-    background-color: rgb(255, 162, 0);
+    background: #ff9500;
     height: 40px;
     color: black;
   }
@@ -66,7 +66,7 @@ p
     margin-right: 40px;
   }
     .payButton {
-      background-color: rgb(255, 162, 0);
+      background: #ff9500;
       color: black;
       margin: 10px;
       padding: 10px;
@@ -123,7 +123,7 @@ p
       font-size: xx-large;
     }
     .payButton {
-      background-color: rgb(255, 162, 0);
+      background: #ff9500;
       color: black;
       margin: 10px;
       padding: 10px;
@@ -134,7 +134,7 @@ p
       margin-bottom: 20px;
     }
     .payButton:hover{
-      background-color: rgb(255, 162, 0);
+      background: #ff9500;
       color: black;
       margin: 10px;
       padding: 10px;
@@ -157,7 +157,7 @@ p
 .cartBeatLicenseButton {
   max-width: 210px;
   max-height: 60px;
-  background-color: rgb(255, 162, 0);
+  background: #ff9500;
   margin-top: 20px;
   color: black;
   font-size: x-large;
