--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,17 @@
 body {
     background-color: #191919;  
   }
+  body::-webkit-scrollbar {
+  width: 0.25rem;
+}
+
+body::-webkit-scrollbar-track {
+  background: #1e1e24;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: #ff9500;
+}
 
   * {
     font-family: 'Open Sans', sans-serif;
@@ -108,7 +119,7 @@ body {
     box-shadow: 0 10px 15px 0 rgb(0, 0, 0, 0.05);
   }
     .buttonBrowseAllTracks {
-      background-color: rgb(255, 162, 0);
+      background: #ff9500;
       text-align: center;
       margin-top: 20px;
       width: 500px;
@@ -116,7 +127,7 @@ body {
       color: black;
     }
     .buttonBrowseAllTracks:hover {
-      background-color: rgb(255, 162, 0);
+      background: #ff9500;
       text-align: center;
       margin-top: 20px;
       width: 500px;
@@ -134,7 +145,7 @@ body {
       margin-top: -600px;
     }
     .buttonBrowseAllTracks {
-      background-color: rgb(255, 162, 0);
+      background: #ff9500;
       text-align: center;
       margin-top: 20px;
       width: 300px;
@@ -142,7 +153,7 @@ body {
       color: black;
     }
     .buttonBrowseAllTracks:hover {
-      background-color: rgb(255, 162, 0);
+      background: #ff9500;
       text-align: center;
       margin-top: 20px;
       width: 300px;
@@ -218,7 +229,7 @@ body {
   .storeContainer {
   }
     /* .buttonBrowseAllTracks {
-      background-color: rgb(255, 162, 0);
+      background: #ff9500;
       text-align: center;
       margin-top: 20px;
       width: 270px;
@@ -226,7 +237,7 @@ body {
       color: black;
     }
     .buttonBrowseAllTracks:hover {
-      background-color: rgb(255, 162, 0);
+      background: #ff9500;
       text-align: center;
       margin-top: 20px;
       width: 270px;
@@ -236,7 +247,7 @@ body {
 }
 @media screen and (min-width: 1024px) {
   .buttonSendOffer {
-      background-color: rgb(255, 162, 0);
+      background: #ff9500;
       margin-top: 10px;
       margin-left: auto;
       margin-right: auto;
@@ -288,7 +299,7 @@ body {
     justify-content: space-between;
   }
     .buttonBrowseAllTracks {
-      background-color: rgb(255, 162, 0);
+      background: #ff9500;
       text-align: center;
       margin-top: 20px;
       width: 200px;
@@ -296,7 +307,7 @@ body {
       color: black;
     }
     .buttonBrowseAllTracks:hover {
-      background-color: rgb(255, 162, 0);
+      background: #ff9500;
       text-align: center;
       margin-top: 20px;
       width: 200px;
